<resources>

    <string name="app_name">IBMorumbi</string>
    <string name="message">Mensagens</string>
    <string name="newsletter">Boletim</string>
    <string name="website">Website</string>
    <string name="map">Mapa</string>
    <string name="about">Sobre</string>
    <string name="message_series">Série de mensagens</string>
    <string name="content_loading">Carregando conteúdos&#8230;</string>
    <string name="buffering_video">Carregando vídeo&#8230;</string>
    <string name="buffering_audio">Carregando áudio&#8230;</string>
    <string name="video_play_error">Erro ao exibir o vídeo</string>
    <string name="message_audio">Áudio</string>
    <string name="message_video">Vídeo</string>
    <string name="message_chooser">Escolha o tipo de mensagem</string>
    
    <string name="map_type">Selecione o tipo de Mapa</string>
    <string name="normal_map">Normal</string>
    <string name="satellite_map">Satélite</string>
    <string name="terrain_map">Terreno</string>
    <string name="hybrid_map">Híbrido</string>
    <string name="calculate_route">Traçar Rota</string>
    
    <string name="ibmorumbi_logo">IB Morumbi Logo</string>
    <string name="ibmorumbi">Igreja Batista do Morumbi</string>
    <string name="address_street">Rua Carvalho de Freitas, 1.076</string>
    <string name="address_district">Morumbi</string>
    <string name="address_city">05728&#8211;030 &#8211; São Paulo &#8211; SP &#8211; Brasil</string>
    <string name="address_phone">Tel: (11) 3538&#8211;0250</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    
    <string name="pastor_img">Pastor</string>
    
    <string name="pdf_show_online_dialog_title">Exibir PDF</string>
    <string name="pdf_show_online_dialog_question">Você está tentando abrir um arquivo PDF, mas você não tem nenhum leitor de PDF instalado. Você quer ler o arquivo PDF on-line com o Google Drive (precisa de uma conta do Google)?</string>
    <string name="pdf_show_online_dialog_button_yes">Sim, exibir on-line</string>
    <string name="pdf_show_online_dialog_button_no">Não</string>
    <string name="pdf_show_local_progress_title">Aguarde</string>
    <string name="pdf_show_local_progress_content">Carregando o arquivo PDF&#8230;</string>

</resources>